--- a/content/posts/2020-10-25-project-2.md
+++ b/content/posts/2020-10-25-project-2.md
@@ -1,6 +1,6 @@
 ---
 template: post
-title: "Project 2:  "
+title: "Project 2:  Recreate a scene"
 slug: pr-2-scene
 draft: true
 date: 2020-10-25T21:42:44.793Z
@@ -9,4 +9,69 @@ category: Projects
 tags:
   - projects
 ---
-placeholder
+## Problem:
+
+Recreate a picture, creating models, shaders, and lighting from scratch.
+
+## Solution:
+
+It took a long while to pick a picture to use for this project. Searching for still life photography, for example, included vegetation in most of the results. Eventually I found this photo, which is from https://www.pexels.com/photo/black-padded-brown-wooden-chair-4067756/.
+
+![Source image](/media/pr2-source.png "Source image")
+
+The image depicts a chair in a room with a wood floor. There's two picture frames above it, one of which is slightly askew. Light shines in at an angle, but the room itself is still well-lit.
+
+I decided to start with the chair, but I wasn't quite sure of the dimensions from other angles, so I did some searching. I found a chair that looks a lot like it at https://www.aliexpress.com/item/32814122240.html to use as a reference. I started with a cube for each separate part of the chair, and through a lot of extrusions, vertex manipulations, bevels, and perseverance, I got something that looks a lot like the chair.
+
+For the wood part of the chair, I used spacetime noise stretched out on u to create some grain, and used a multiplication node to add in the color.
+
+![Chair wood](/media/pr2-chairWood.png "Chair wood graph")
+![Chair model](/media/pr2-chair.png "Chair model")
+
+For the cushions, I mixed some fractal and billow noise together for the bump. I also fed the noise into a mult with the base color to get the final color. It took a while messing with the specular and sheen components of the shader to get a result that looked close to the original (it kept on ending up far too bright).
+
+![Cushion](/media/pr2-leather.png "Leather graph")
+
+For both the wood back and seat of the chair I had to do a camera projection of the UV's to avoid distortion.
+
+For the floor, I stretched out a block, beveled the edges, instanced it once to get another at an angle, and did a whole lot more instancing. Similar to the floor, I fed in stretched out spacetime noise, but I added a color jitter node set to object for the type to get variation in the floorboards.
+
+![Floor graph](/media/pr2-floor.png "Floor graph")
+![Floor instances](/media/pr2-instancing.png "Whole 'lotta instancing")
+
+Like I said, a lot of instancing.
+
+The back wall was simple enough (just a plane), and then I added another block along the bottom for a baseboard. Neither had anything fancy going on with the shader graph, but it took a bit of time to get the baseboard to look properly flat in color -- I ended up bumping diffuse roughness up all the way.
+
+![Wall](/media/pr2-wall.png "Wall")
+
+The picture frames were made from boxes scaled up as well. The frame material doesn't seem to reflect light -- they're nearly completely uniformly black -- so I reduced the specular to almost nothing.
+
+The socket that's barely visible behind the chair was a pain, but I found a reference that looked like it was from the same room and used a bend deformer on a plane to start the front of one half of it, mirrored that half, and extruded it all back. A whole lot of edge loops and extrusions later, and I had something that resembled the original. Massive pain for something that's barely visible in the scene.
+
+![Socket](/media/pr2-socket.png "Booleans may have been involved")
+
+Booleans may or may not have been involved in the creation of this socket.
+
+For the material, I had a lot of trouble getting the material to look right. I ended up using off-white for the base color, and a very light manilla for some subsurface scattering.
+
+![Socket shader](/media/pr2-socketShader.png "Socket shader")
+
+The room had a lot of ambient light, so I scaled up a large area light and placed it above.
+
+![Lighting](/media/pr2-lighting.png "Lighting")
+
+To get the highlight that streams in between the picture frames, I used a spotlight with a barndoor to control the beam and a globo to try to get closer to the source image. The barndoor was done through trial and error, since I couldn't find a way to represent the barndoor in the editor -- it had to be adjusted, rendered, and adjusted again to try to get closer to the source. I fed in a circular ramp and some billow noise to the globo.
+
+![Barndoor](/media/pr2-barndoor.png "Barndoor")
+![Globo noise](/media/pr2-globo-noise.png "Globo noise")
+![Spotlight graph](/media/pr2-spotlight.png "Spotlight graph")
+
+Finally, for rendering, I used an aspect ratio of .67 and set up a camera with the same ratio, since the source image was vertical.
+
+![Final render](/media/pr2-vertical.png "Final render")
+
+And here's a few other angles.
+
+![Angle 2](/media/pr2-second.png "Second shot")
+![Angle 3](/media/pr2-third.png "Third shot")
