Update Posts “2020-10-25-project-2”

--- a/content/posts/2020-10-25-project-2.md
+++ b/content/posts/2020-10-25-project-2.md
@@ -2,7 +2,7 @@
 template: post
 title: "Project 2:  Recreate a scene"
 slug: pr-2-scene
-draft: true
+draft: false
 date: 2020-10-25T21:42:44.793Z
 description: For project 2, we had to recreate a scene.
 category: Projects
@@ -15,13 +15,13 @@ Recreate a picture, creating models, shaders, and lighting from scratch.
 
 ## Solution:
 
-It took a long while to pick a picture to use for this project. Searching for still life photography, for example, included vegetation in most of the results. Eventually I found this photo, which is from https://www.pexels.com/photo/black-padded-brown-wooden-chair-4067756/.
+It took a long while to pick a picture to use for this project. Searching for still life photography, for example, included vegetation in most of the results. Eventually I found this photo, which is from <https://www.pexels.com/photo/black-padded-brown-wooden-chair-4067756/>.
 
-![Source image](/media/pr2-source.png "Source image")
+![Source image](/media/pr2-source.jpg "Source image")
 
 The image depicts a chair in a room with a wood floor. There's two picture frames above it, one of which is slightly askew. Light shines in at an angle, but the room itself is still well-lit.
 
-I decided to start with the chair, but I wasn't quite sure of the dimensions from other angles, so I did some searching. I found a chair that looks a lot like it at https://www.aliexpress.com/item/32814122240.html to use as a reference. I started with a cube for each separate part of the chair, and through a lot of extrusions, vertex manipulations, bevels, and perseverance, I got something that looks a lot like the chair.
+I decided to start with the chair, but I wasn't quite sure of the dimensions from other angles, so I did some searching. I found a chair that looks a lot like it at <https://www.aliexpress.com/item/32814122240.html> to use as a reference. I started with a cube for each separate part of the chair, and through a lot of extrusions, vertex manipulations, bevels, and perseverance, I got something that looks a lot like the chair.
 
 For the wood part of the chair, I used spacetime noise stretched out on u to create some grain, and used a multiplication node to add in the color.
 
@@ -75,3 +75,5 @@ And here's a few other angles.
 
 ![Angle 2](/media/pr2-second.png "Second shot")
 ![Angle 3](/media/pr2-third.png "Third shot")
+
+The project can be downloaded here:  <https://clemson.box.com/s/zjjutpsvlog2ido4718pgmvo1nx1tm2k>
